Fix alignment of "hide this" button.

--- a/client/task-list/style.scss
+++ b/client/task-list/style.scss
@@ -60,6 +60,7 @@
 		justify-content: center;
 		font-size: 14px;
 		font-weight: 500;
+		display: inline-block;
 
 		&:not(.is-primary) {
 			color: theme(button); // $theme-color
